<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.second.SecondScreenFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            app:menu="@menu/option_menu"
            app:navigationIcon="@drawable/baseline_arrow_back_24">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_second_screen"
                android:textSize="18sp"
                android:textStyle="bold" />


        </com.google.android.material.appbar.MaterialToolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D5D5DB"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/tvWelcome"
        android:layout_marginTop="27dp"
        android:layout_marginStart="21dp"/>

    <TextView
        android:id="@+id/tvInputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/tv_show_input_name"
        android:textStyle="bold"
        android:layout_marginStart="21dp"/>

    <TextView
        android:id="@+id/tvSelectedUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/tv_selected_user"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginVertical="250dp"/>

    <Button
        android:id="@+id/btnChooseUser"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:text="@string/btn_choose_user"
        android:background="@drawable/rectangle_button"
        app:backgroundTint="#2B637B"/>




</LinearLayout>